--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     </div>
     <div class="images">
         <div class="section_1">
-            <img src="/images/k1_files/294820147_143694708291627_3939808054850702572_n.webp" alt="">
-            <img src="/images/k1_files/295620575_321461036787350_7205259558366672266_n.webp" alt="">
-            <img src="/images/k1_files/305530792_128484846596815_5001872699994287609_n.webp" alt="">
-            <img src="/images/k1_files/328811421_915806406242594_6563491056792087617_n.jpg" alt="">
+            <img src="./images/k1_files/294820147_143694708291627_3939808054850702572_n.webp" alt="">
+            <img src="./images/k1_files/295620575_321461036787350_7205259558366672266_n.webp" alt="">
+            <img src="./images/k1_files/305530792_128484846596815_5001872699994287609_n.webp" alt="">
+            <img src="./images/k1_files/328811421_915806406242594_6563491056792087617_n.jpg" alt="">
         </div>
         <div class="section_1">
-            <img src="/images/k1_files/334551740_565991345299012_4070089295772455958_n.jpg" alt="">
-            <img src="/images/k1_files/309863252_1049759429041336_7765651177971238761_n.jpg" alt="">
-            <img src="/images/k1_files/338468399_602472118456467_1075118244987113558_n.jpg" alt="">
-            <img src="/images/k1_files/339089792_751877202981189_69671052964248350_n.webp" alt="">
+            <img src="./images/k1_files/334551740_565991345299012_4070089295772455958_n.jpg" alt="">
+            <img src="./images/k1_files/309863252_1049759429041336_7765651177971238761_n.jpg" alt="">
+            <img src="./images/k1_files/338468399_602472118456467_1075118244987113558_n.jpg" alt="">
+            <img src="./images/k1_files/339089792_751877202981189_69671052964248350_n.webp" alt="">
         </div>
         <div class="section_1">
-            <img src="/images/k1_files/340485760_509100464589444_6693279027185811821_n(1).jpg" alt="">
-            <img src="/images/k1_files/341175551_113643628346345_6355743165422041035_n.webp" alt="">
-            <img src="/images/k1_files/343636913_148250888035578_3362547131128169779_n.jpg" alt="">
-            <img src="/images/k1_files/340485760_509100464589444_6693279027185811821_n.jpg" alt="">
+            <img src="./images/k1_files/340485760_509100464589444_6693279027185811821_n(1).jpg" alt="">
+            <img src="./images/k1_files/341175551_113643628346345_6355743165422041035_n.webp" alt="">
+            <img src="./images/k1_files/343636913_148250888035578_3362547131128169779_n.jpg" alt="">
+            <img src="./images/k1_files/340485760_509100464589444_6693279027185811821_n.jpg" alt="">
         </div>
        
        
